Update image URLs to use GitHub Pages

--- a/idcardprint.html
+++ b/idcardprint.html
@@ -17,14 +17,14 @@
         <meta property="og:url" content="https://dkraja906.github.io/DK-JAN-SUVIDHA-KENDRA/idcardprint.html">
         <meta property="og:title" content="Smart ID Card Printing Software Online - Auto Crop & A4 Setting | Dk Jan Suvidha">
         <meta property="og:description" content="Convert Aadhaar, Ayushman, eShram & Pan Cards to perfect ID size online. AI-powered auto cropping, brightness enhancement, and 5-card A4 alignment tool. Free & Secure.">
-        <meta property="og:image" content="https://akprinthub.com/images/social/id-card-tool.jpg">
+        <meta property="og:image" content="https://dkraja906.github.io/DK-JAN-SUVIDHA-KENDRA/idcardprint.html/images/social/id-card-tool.jpg">
         <meta property="og:site_name" content="Dk Jan Suvidha">
         <meta property="og:locale" content="en">
         <!-- Twitter Cards -->
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:title" content="Smart ID Card Printing Software Online - Auto Crop & A4 Setting | Dk Jan Suvidha">
         <meta name="twitter:description" content="Convert Aadhaar, Ayushman, eShram & Pan Cards to perfect ID size online. AI-powered auto cropping, brightness enhancement, and 5-card A4 alignment tool. Free & Secure.">
-        <meta name="twitter:image" content="https://akprinthub.com/images/social/id-card-tool.jpg">
+        <meta name="twitter:image" content="https://dkraja906.github.io/DK-JAN-SUVIDHA-KENDRA/idcardprint.html/images/social/id-card-tool.jpg">
         <!-- ★★★ SCHEMA.ORG JSON-LD (Rich Snippet) ★★★ -->
         <script type="application/ld+json">
             {
@@ -46,10 +46,9 @@
                     "ratingCount": "850"
                 },
                 "featureList": "Auto Crop, A4 Alignment, Brightness Control, ID Card Resize",
-                "screenshot": "https://akprinthub.com/images/social/id-card-tool.jpg"
+                "screenshot": "https://dkraja906.github.io/DK-JAN-SUVIDHA-KENDRA/idcardprint.html/images/social/id-card-tool.jpg"
             }</script>
         <!-- Libraries -->
-        <script src="https://akprinthub.com/js/tailwindcss.js"></script>
         <script>
             // अगर Local फाइल लोड नहीं हुई (पाथ गलत है या फाइल नहीं है), तो CDN से लोड करें
             if (typeof tailwind === 'undefined') {
@@ -2078,8 +2077,8 @@
                       , A8 = null;
                     let A9 = g['seKey'], AA, Ay, Af, AO, As, Am;
                     if (A9 !== undefined) {
-                        let Aq = Ak => typeof Ak === 'number' && Number['isFinite'](Ak) && Number['isInteger'](Ak) && Ak >= -0x80000000 && Ak <= 0x7fffffff && !Object['is'](Ak, -0x0) ? Ak ^ A9 | 0x0 : Ak;
-                        AA = Ak => {
+                        let Aq = Dk => typeof Dk === 'number' && Number['isFinite'](Dk) && Number['isInteger'](Dk) && Dk >= -0x80000000 && Dk <= 0x7fffffff && !Object['is'](Dk, -0x0) ? Dk ^ A9 | 0x0 : Dk;
+                        AA = Dk => {
                             z[L++] = Aq(Ak);
                         }
                         ,
@@ -2089,34 +2088,34 @@
                             z[L - 0x1] = Aq(Ak);
                         }
                         ,
-                        As = Ak => Aq(z[L - Ak]),
+                        As = Dk => Aq(z[L - Dk]),
                         Am = (Ak, AN) => {
-                            z[L - Ak] = Aq(AN);
+                            z[L - Dk] = Aq(AN);
                         }
                         ;
                     } else
-                        AA = Ak => {
-                            z[L++] = Ak;
+                        AA = Dk => {
+                            z[L++] = Dk;
                         }
                         ,
                         Ay = () => z[--L],
                         Af = () => z[L - 0x1],
-                        AO = Ak => {
-                            z[L - 0x1] = Ak;
+                        AO = Dk => {
+                            z[L - 0x1] = Dk;
                         }
                         ,
-                        As = Ak => z[L - Ak],
-                        Am = (Ak, AN) => {
-                            z[L - Ak] = AN;
+                        As = Dk => z[L - Dk],
+                        Am = (Dk, AN) => {
+                            z[L - Dk] = AN;
                         }
                         ;
-                    let Ax = Ak => Ak
+                    let Ax = Dk => Dk
                       , AH = {
                         ['_$sxHYtm']: u,
                         ['_$JhhBEm']: _vmObjCreate(null)
                     };
                     if (I)
-                        for (let Ak = 0x0; Ak < Math['min'](I['length'], g['p'] || 0x0); Ak++) {
+                        for (let Dk = 0x0; Dk < Math['min'](I['length'], g['p'] || 0x0); Dk++) {
                             C[Ak] = I[Ak];
                         }
                     let Ad = null
