Update name from 'AkPrintHub' to 'DK JAN SUVIDHA KENDRA'

--- a/idcardprint.html
+++ b/idcardprint.html
@@ -408,7 +408,7 @@
                     <i class="fa-solid fa-print"></i>
                 </div>
                 <div>
-                    <span class="font-bold text-lg block leading-none">AkPrintHub</span>
+                    <span class="font-bold text-lg block leading-none">DK JAN SUVIDHA KENDRA</span>
                     <span class="text-[10px] text-gray-400 font-bold tracking-wide">AUTO SUITE</span>
                 </div>
                 <a href="/en/" title="Back to Home" class="ml-auto w-8 h-8 flex items-center justify-center rounded-full bg-slate-50 text-slate-500 border border-slate-200 hover:bg-blue-50 hover:text-blue-600 hover:border-blue-200 transition-all shadow-sm">
