--- a/idcardprint.html
+++ b/idcardprint.html
@@ -409,9 +409,9 @@
                 </div>
                 <div>
                     <span class="font-bold text-lg block leading-none">DK JAN SUVIDHA KENDRA</span>
-                    <span class="text-[10px] text-gray-400 font-bold tracking-wide">AUTO SUITE</span>
+                    <span class="text-[10px] text-gray-400 font-bold tracking-wide">DK AUTO SUITE</span>
                 </div>
-                <a href="/en/" title="Back to Home" class="ml-auto w-8 h-8 flex items-center justify-center rounded-full bg-slate-50 text-slate-500 border border-slate-200 hover:bg-blue-50 hover:text-blue-600 hover:border-blue-200 transition-all shadow-sm">
+                <a href="https://dkraja906.github.io/DK-JAN-SUVIDHA-KENDRA/" title="Back to Home" class="ml-auto w-8 h-8 flex items-center justify-center rounded-full bg-slate-50 text-slate-500 border border-slate-200 hover:bg-blue-50 hover:text-blue-600 hover:border-blue-200 transition-all shadow-sm">
                     <i class="fa-solid fa-house text-xs"></i>
                 </a>
             </div>
