Open ID card print link in a new tab

--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
                 </div>
             </a>
             <!-- 17. Id card Print -->
-            <a href="idcardprint.html">
+            <a href="idcardprint.html"target="_blank"style="text-decoration: none;">
                 <div class="card rang-id">
                     <h3>ID card print</h3>
                     <p>Id card Print.</p>
