Change page name in download function

--- a/idcardprint.html
+++ b/idcardprint.html
@@ -1747,7 +1747,7 @@
                     'ni': 0x8
                 }, {
                     'i': [0x0, 0x0, 0x8, 0x0, 0x0, 0x1, 0xa, null, 0xa, null, 0x0, 0x2, 0xa, null, 0x7, 0x1, 0x0, 0x3, 0x4b, 0x4, 0x4, null, 0x46, 0x5, 0x0, 0x1, 0x37, 0x1, 0x7, 0x2, 0x6, 0x2, 0x6, 0x1, 0x47, 0x6, 0x3, null, 0x6, 0x2, 0x4b, 0x7, 0x8, 0x0, 0x48, null, 0x47, 0x8, 0x3, null, 0x6, 0x2, 0x4, null, 0x46, 0x9, 0x0, 0xa, 0x37, 0x0, 0x3, null, 0x1, null, 0x38, null],
-                    'c': ["AkPrintHub_Page_", 0x1, ".jpg", "a", "document", "createElement", "download", "savedPages", "href", "click", 0x0, "downloadSavedPage"],
+                    'c': ["Dkjansuvidha_Page_", 0x1, ".jpg", "a", "document", "createElement", "download", "savedPages", "href", "click", 0x0, "downloadSavedPage"],
                     'p': 0x1,
                     'l': 0x2,
                     'sp': 0x1,
