--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
         .rang-udyam { background: linear-gradient(135deg, #CA52FA, #0EECE5); }
         .rang-photo { background: linear-gradient(135deg, #75F505, #CB356B); }
         .rang-pdfeditor { background: linear-gradient(135deg, #8E2DE2, #CB356B); }
-        .rang-id { background: linear-gradient(135deg, #8E2DE2, #CB356B); }
+        .rang-id { background: linear-gradient(135deg, #F00A5E, #4A00E0); }
 
 
 
@@ -411,7 +411,7 @@
                 </div>
             </a>
              <!-- 17. PDFEDITOR -->
-            <a href="pdf-editor.html">
+            <a href="pdf-editor.html"target="_blank"style="text-decoration: none;">
                 <div class="card rang-pdfeditor">
                     <h3> PDF Editor</h3>
                     <p>PDFEDITOR.</p>
@@ -471,8 +471,7 @@
     <div style="background: #1E1E1E; padding: 25px; width: 90%; max-width: 400px; border-radius: 10px; border: 2px solid #4CAF50; color: #fff;">
         <h3 style="color: #4CAF50; border-bottom: 1px solid #444; padding-bottom: 10px;">📞 संपर्क करें (Contact Us)</h3>
         <p style="margin-top: 15px; line-height: 1.8;">
-            <strong>📍 पता:</strong> रानीखेड़ा चौराहा, बछरावां<br>
-            <strong>📱फ़ोन:</strong> +91 8318736819<br>
+            <strong>📍 पता:</strong> रानीखेड़ा चौराहा<br>
             <strong>📧 ईमेल:</strong> dkjansuvidha@gmail.com
         </p>
         <button onclick="document.getElementById('contactUs').style.display='none'" style="background: #4CAF50; color: black; border: none; padding: 8px 20px; margin-top: 15px; border-radius: 5px; cursor: pointer;">Close</button>
