Remove location from header paragraph

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
     <header>
         <div id="datetime-display"></div>
         <h1>DK Jan Suvidha Kendra</h1>
-        <p>Ranikheda Chauraha, Bachhrawan | Aapki Seva Mein Hamesha Tatpar</p>
+        <p>Aapki Seva Mein Hamesha Tatpar</p>
     </header>
 
     <div style="background-color: #ff0000; color: #ffffff; padding: 12px; margin: 10px auto; width: 95%; max-width: 1000px; border-radius: 8px; border: 2px solid #ffffff; box-shadow: 0 4px 8px rgba(0,0,0,0.5);">
