--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         }
 
         header {
-            background: linear-gradient(135deg, #f12711, #f5af19);
+            background: linear-gradient(135deg, #f0160E, #4AB005);
             color: white;
             padding: 30px;
             text-align: center;
