Change header background gradient direction and colors

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         }
 
         header {
-            background: linear-gradient(135deg, #f0160E, #4AB005);
+            background: linear-gradient(to bottom, #f0160E,#F2F5F5,#4AB005);
             color: white;
             padding: 30px;
             text-align: center;
