--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
         }
 
         header {
-            background: linear-gradient(to bottom, #f0160E,#F2F5F5,#4AB005);
+            background: linear-gradient(to bottom,#FF9933 0%, #FF9933 33.3%, 
+        #FFFFFF 33.3%, #FFFFFF 66.6%, 
+        #138808 66.6%, #138808 100%);
             color: white;
             padding: 30px;
             text-align: center;
