Change header background gradient colors

--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
         }
 
         header {
-            background: linear-gradient(to bottom,#FF9933 0%, #FF9933 33.3%, 
-        #FFFFFF 33.3%, #FFFFFF 66.6%, 
-        #138808 66.6%, #138808 100%);
+            background: linear-gradient(to bottom,#BD1B08,#E8EDE8,#039609);
             color: white;
             padding: 30px;
             text-align: center;
