Change header background gradient colors

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         }
 
         header {
-            background: linear-gradient(to bottom,#BD1B08,#E8EDE8,#039609);
+            background: linear-gradient(to bottom,#BD1B08,#B5B5B5,#039609);
             color: white;
             padding: 30px;
             text-align: center;
